--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,6 @@
 @import "../layout/Header/header.scss";
 @import "../layout/Footer/footer.scss";
 
-@import "../layout/Error/404.scss";
-@import "../components/About/about.scss";
+@import "../pages/Error/404.scss";
+@import "../pages/About/about.scss";
 @import "../pages/Logement/logement.scss";
