--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,7 @@ body {
 .logement {
   width: 100%;
   max-width: 1240px;
-  min-width: 270px;
+  min-width: 250px;
   height: 100%;
   border-radius: 25px;
   margin: auto;
@@ -119,23 +119,29 @@ body {
   color: white;
 }
 
-@media (max-width: 768px) {
-  .logement__list__content {
-    width: 100%;
-    min-width: 240px;
-    max-width: 100%;
-    height: 100%;
-    min-height: 255px;
-    max-height: 100%;
-  }
-}
 @media (max-width: 425px) {
   .logement {
     background-color: transparent;
   }
   .logement__list {
-    padding: 12px;
+    padding: 0px;
     row-gap: 20px;
+  }
+  .logement__list__content__bg {
+    height: 98%;
+  }
+}
+@media (max-width: 768px) {
+  .logement__list__content {
+    width: 100%;
+    min-width: 240px;
+    max-width: 700px;
+    height: 100%;
+    min-height: 100px;
+    max-height: 500px;
+  }
+  .logement__list__content img {
+    object-fit: cover;
   }
 }
 .header {
