--- a/src/pages/Logement/logement.scss
+++ b/src/pages/Logement/logement.scss
@@ -11,6 +11,14 @@
             border-radius: 25px;
             object-fit: cover;
         }
+        &__count{
+            position: absolute;
+            left: 48.8%;
+            bottom: 5%;
+            font-size: 18px;
+            font-weight: 500;
+            color: white;
+        }
         &__previous, &__next{
             position: absolute;
             top: 40%;
